<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DiscountActivity">

    <TextView
        android:id="@+id/tvTicketPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/label_ticket_price"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/etTicketPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etTicketPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/label_enter_tp"
        android:inputType="number|numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@+id/tvTicketPrice"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDiscount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/label_discount"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTicketPrice" />

    <RadioGroup
        android:id="@+id/radioDiscount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@id/tvDiscount"
        app:layout_constraintTop_toBottomOf="@id/etTicketPrice">

        <RadioButton
            android:id="@+id/radioFive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_five" />

        <RadioButton
            android:id="@+id/radioTen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_ten" />

        <RadioButton
            android:id="@+id/radioFifteen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_fifteen" />

        <RadioButton
            android:id="@+id/radioTwenty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_twenty" />

        <RadioButton
            android:id="@+id/radioFifty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_fifty" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvDiscountedPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/label_discountedPrice"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioDiscount" />

    <TextView
        android:id="@+id/tvCalculatedPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/tvDiscountedPrice"
        app:layout_constraintTop_toBottomOf="@id/radioDiscount" />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:text="@string/label_calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDiscountedPrice" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:background="@android:color/transparent"
        android:text="@string/label_clear"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCalculate" />

</androidx.constraintlayout.widget.ConstraintLayout>